--- a/2_1_typography.html
+++ b/2_1_typography.html
@@ -124,26 +124,32 @@
     <br>
 
     <!-- START HERE -->
-
+    
     <!-- HEADINGS -->
+<h1>Heading One</h1>
+<h2>Heading Two</h2>
+<h3>Heading Three</h3>
+<h4>Heading Four</h4>
+<h5>Heading Five</h5>
+<h6>Heading Six</h6>
 
     <!-- PARAGRAPH -->
-
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla labore quas temporibus placeat laborum soluta fuga sunt deserunt esse expedita dolores consectetur aspernatur architecto dolorem, eum, dolor asperiores sit sequi.Dolorem, sed repudiandae cupiditate optio fugit inventore exercitationem, quas, aspernatur in repellat perferendis maxime. Explicabo numquam officiis inventore mollitia sapiente consectetur aut nostrum nam veniam repudiandae voluptas, laudantium veritatis sequi!</p>
 
     <!-- BLOCKQUOTE -->
-
+    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos iste earum qui doloribus, eligendi magni cupiditate assumenda? Officiis debitis nesciunt dolorem dolor consequuntur explicabo optio voluptas unde, temporibus, totam eius.Commodi temporibus aliquam repellendus accusantium sed rem et eaque natus, ab recusandae quo molestiae enim voluptatum eligendi perspiciatis dicta nulla sapiente eveniet iusto, nisi aperiam repellat. Explicabo veniam totam quasi?</blockquote>
 
     <!-- FLOW TEXT -->
-    <p>
+    <p class="flow-text">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ex non vero nemo minima corporisullam blanditiis consequuntur,
       est ab.</p>
 
     <!-- TEXT ALIGNMENT -->
     <div>
-      <h5>Left aligned text</h5>
+      <h5 class="left-align">Left aligned text</h5>
     </div>
     <div>
-      <h5>Right aligned text</h5>
+      <h5 class="Right aligned text"></h5> </h5>
     </div>
     <div>
       <h5>Center aligned text</h5>
@@ -151,12 +157,12 @@
 
     <!-- VERTICAL ALIGNMENT -->
     <div>
-      <h5>This should be vertically aligned</h5>
+      <h5 style="height:400" class="valign-wrapper">This should be vertically aligned</h5>
     </div>
 
     <!-- QUICK FLOATS -->
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
+    <p class="left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
+    <p class="right">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
     <div></div>
     <!-- CLEAR FLOATS -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nulla!</p>
@@ -182,9 +188,6 @@
       });
 
       // JAVASCRIPT START HERE //
-
-
-
 
     });
   </script>
