--- a/2_3_buttons_icons.html
+++ b/2_3_buttons_icons.html
@@ -127,25 +127,28 @@
     <!-- START HERE -->
 
     <!-- STANDARD BUTTON -->
-    <button>Read More</button>
-    <a>Read More</a>
+    <button class="btn">Read More</button>
+    <a class="btn">Read More</a>
 
     <!-- WAVES EFFECT -->
-    <button>Read More</button>
-    <a>Read More</a>
+    <button class="btn waves-effect waves-light">Read More</button>
+    <a class="btn waves-effect waves-light" >Read More</a>
 
-    <!-- WAVE COLORS -->
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
+    <!-- WAVE COLORS --> 
+    <button class="btn white red-text waves-effect waves-red">Read More</button>
+    <button class="btn white green-text waves-effect waves-green">Read More</button>
+    <button class="btn white blue-text waves-effect waves-blue">Read More</button>
+    <button class="btn white yellow-text waves-effect waves-yellow">Read More</button>
+    <button class="btn white pink-text waves-effect waves-grey">Read More</button>
 
     <br>
     <br>
 
     <!-- MATERIAL ICONS (https://material.io/icons) -->
-
+    <i class="material-icons orange-text large">shopping cart</i>
+    <i class="material-icons blue-text medium">settings</i>
+    <i class="material-icons yellow-text small">search</i>
+    <i class="material-icons pink-text tiny">star</i>
 
     <br>
     <br>
@@ -159,23 +162,24 @@
     <a href="#!">Buy Now</a>
     <a href="#!">Buy Now</a>
     <!-- BUTTON WITH FONT AWESOME ICON -->
-    <a href="#!">Buy Now</a>
+    <a href="" class="btn waves-effect waves waves-light"> <i class="fa fa-shopping-cart left">Buy now</i> </a>
+    <!-- <a href="#!">Buy Now</a> -->
     <br>
     <br>
 
     <!-- COLORED BUTTONS -->
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
-    <button>Read More</button>
+    <button class="btn pink">Read More</button>
+    <button class="btn grey">Read More</button>
+    <button class="btn yellow">Read More</button>
+    <button class="btn brown">Read More</button>
+    <button class="btn green">Read More</button>
+    <button class="btn cyan"> Read More</button>
 
     <br>
     <br>
 
     <!-- LARGE BUTTON -->
-    <button>Large Button</button>
+    <button class="btn-large">Large Button</button>
     <!-- DISABLED BUTTON -->
     <button>Disabled Button</button>
 
