--- a/3_5_tables_media.html
+++ b/3_5_tables_media.html
@@ -156,7 +156,7 @@
     <br>
 
     <!-- STRIPED TABLE -->
-    <table>
+    <table class="striped">
       <thead>
         <tr>
           <th>Name</th>
@@ -187,7 +187,7 @@
     <br>
 
     <!-- BORDERED, HIGHTLIGHTED & RESPONSIVE TABLE -->
-    <table>
+    <table class="bordered highlight responsive-table">
       <thead>
         <tr>
           <th>Name</th>
@@ -218,15 +218,23 @@
     <br>
 
     <!-- RESPONSIVE IMAGE -->
-
+    <div class="row">
+      <div class="col s12"><img src="img/img2.jpg" alt="" class="responsive-img"></div>
+    </div>
 
     <!-- CIRLCE IMAGE -->
-
+<div class="col s12"><img src="img/img2.jpg" alt="" class="responsive-img circle"></div>
 
     <!-- RESPONSIVE VIDEO EMBED -->
+    <div class="video-container">
+      <iframe width="700" height="394" src="https://www.youtube.com/embed/w6lal2E56gc" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+    </div>
     <!-- RESPONSIVE VIDEO ELEMENT -->
-
+    <vide class="responsive-video">
+      <source src="#" type="video/mp4">
+    </vide>
 
     <!-- END HERE -->
 
