--- a/2_4_floating.html
+++ b/2_4_floating.html
@@ -125,43 +125,43 @@
     <!-- START HERE -->
 
     <!-- FLOATING BUTTONS -->
-    <button>
-      <i></i>
-    </button>
-    <button>
-      <i></i>
+    <button class="btn-floating btn-large waves-effect waves-light red">
+      <i class="material-icons">add</i>
+    </button >
+    <button class="btn-floating btn-large waves-effect waves-light blue">
+      <i class="material-icons">edit</i>
     </button>
     <!-- PULSE EFFECT -->
-    <button>
-      <i></i>
+    <button class="btn-floating btn-large waves-effect waves-light green pulse">
+      <i class="material-icons">publish</i>
     </button>
 
     <!-- SIMPLE FIXED ACTION BUTTON -->
-    <div>
-      <button>
-        <i></i>
+    <div class="fixed-action-btn">
+      <button class="btn-floating btn-large red">
+        <i class="material-icons">add</i>
       </button>
     </div>
 
-    <!-- FIXED ACTION BUTTON [horizontal, click-to-toggle] -->
-    <div>
-      <a>
-        <i></i>
+    <!-- FIXED ACTION BUTTON [horizontal, click-to-toggle]
+    <div class="fixed-action-btn horizontal click-to-toggle">
+      <a class="btn-floating btn-large red">
+        <i class="material-icons">more_edit</i>
       </a>
       <ul>
         <li>
-          <a>
-            <i></i>
+          <a class="btn-floating pink">
+            <i class="material-icons">insert_chart</i>
           </a>
         </li>
         <li>
-          <a>
-            <i></i>
+          <a class="btn-floating blue">  
+            <i class="material-icons">format_quote</i>
           </a>
         </li>
         <li>
-          <a>
-            <i></i>
+          <a class="btn-floating green">
+            <i class="material-icons">published</i>
           </a>
         </li>
         <li>
@@ -170,32 +170,32 @@
           </a>
         </li>
       </ul>
-    </div>
+    </div> -->
 
     <!-- FAB TOOLBAR -->
-    <div>
-      <a>
-        <i></i>
+    <div class="fixed-action-btn toolbar">
+      <a class="btn-floating btn-large red">
+        <i class="material-icons">More edit</i>
       </a>
       <ul>
-        <li>
+        <li class="waves-effect-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">insert_chart</i>
           </a>
         </li>
-        <li>
+        <li class="waves-effect-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">format_quote</i>
           </a>
         </li>
-        <li>
+        <li class="waves-effect-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">published</i>
           </a>
         </li>
-        <li>
+        <li class="waves-effect-light">
           <a href="#!">
-            <i></i>
+            <i class="material-icons">attach_file</i>
           </a>
         </li>
       </ul>
