--- a/3_2_breadcrumbs.html
+++ b/3_2_breadcrumbs.html
@@ -128,13 +128,13 @@
   <!-- START HERE -->
 
   <!-- BREADCRUMB -->
-  <nav>
-    <div>
-      <div>
-        <div>
-          <a href="#">Home</a>
-          <a href="#">Users</a>
-          <a href="#">Brad</a>
+  <nav class="grey">
+    <div class="nav-wrapper">
+      <div class="container">
+        <div class="col s12">
+          <a href="#" class="breadcrumb">Home</a>
+          <a href="#" class="breadcrumb">Users</a>
+          <a href="#" class="breadcrumb">Brad</a>
         </div>
       </div>
     </div>
@@ -144,8 +144,34 @@
   <br>
 
   <!-- FOOTER -->
-  <footer>
-
+  <footer class="page-footer grey-darken-3">
+<div class="container">
+  <row>
+    <col class="s12 m6">
+      <h5 class="grey-text text-lighten-3"></h5>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ea cupiditate tenetur velit praesentium iusto distinctio illo iure temporibus dicta voluptatum corporis quidem, odit nihil tempora dolorem beatae vero repudiandae.Et, quasi, quod dolorum iste fugiat illum tenetur obcaecati dolor error, accusantium aliquam enim possimus id at recusandae! Nulla reiciendis adipisci blanditiis dolorem vitae sed fuga cupiditate nam, illo tenetur?</p>
+  </row>
+</div>
+<div class="col s12 m4 offset-m2">
+  <h5 class="grey-text-lighten-3">Links</h5>
+  <ul>
+    <li>
+      <a href="" class="white-text"></a>
+    </li>
+    <li>
+      <a href="" class="white-text"></a>
+    </li>
+    <li>
+      <a href="" class="white-text"></a>
+    </li>
+    <li>
+      <a href="" class="white-text"></a>
+    </li>
+  </ul>
+</div>
+  <div class="container">Copyright&copy; 2019</div>
+  <a href="" class="grey-text text-lighten-3 right">Terms & condition</a>
+</div>
   </footer>
 
 
