--- a/3_3_forms.html
+++ b/3_3_forms.html
@@ -130,78 +130,108 @@
     <!-- START HERE -->
     <form>
       <!-- TEXT FIELD -->
-      <div>
+      <div class="input-field">
         <input placeholder="Name" id="name" type="text">
         <label for="name">Name</label>
       </div>
 
       <!-- VALUE & DISABLED -->
-      <div>
+      <div class="input-field">
         <input placeholder="Email" id="email" type="email">
         <label for="email">Email</label>
       </div>
 
       <!-- TEXTAREA -->
-      <div>
-        <textarea placeholder="Message" id="message"></textarea>
+      <div class="input-field">
+        <textarea placeholder="Message" id="message" class="materialize-textarea"></textarea>
         <label for="message">Message</label>
       </div>
 
       <!-- INLINE FIELD -->
       Number of users:
-      <div>
+      <div class="input-field inline">
         <input id="users" type="text">
         <label for="users">#</label>
       </div>
 
       <!-- ICON PREFIX -->
-      <div>
+      <div class="input-field">
+        <i class="material-icons prefixed red-text">phone</i>
         <input id="phone" type="tel">
         <label for="phone">Phone Number</label>
       </div>
 
       <!-- VALIDATION & ERROR -->
-      <div>
-        <input placeholder="Email" id="email" type="email">
-        <label for="email">Email</label>
+      <div class="input-field">
+        <input placeholder="Email" id="email" type="email" class="validate">
+        <label data-error="Invalid" data-success="Valid" for="email">Email</label>
       </div>
 
       <!-- SELECT (Must be initialized) -->
-      <div>
+      <div class="input-field">
         <select>
-
+          <option value="">Option 1</option>
+          <option value="">Option 2</option>
+          <option value="">Option 3</option>
         </select>
         <label>Select List</label>
       </div>
 
       <!-- OPTION GROUPS -->
-      <div>
+      <div class="input-field">
         <select>
-
+          <optgroup label="Option Group 1">
+            <option value="1">Option 1</option>
+            <option value="2">Option 2</option>
+          </optgroup>
+          <optgroup label="Option Group 2">
+            <option value="3">Option 3</option>
+            <option value="4">Option 4</option>
+          </optgroup>
         </select>
         <label>Multiple Select</label>
       </div>
 
       <!-- MULTIPLE SELECT -->
-      <div>
-        <select>
-
+      <div class="input-field">
+        <select multiple>
+          <option disabled selected>Select Option</option>
+          <option value="1">Option 1</option>
+          <option value="2">Option 2</option>
+          <option value="3">Option 3</option>
         </select>
-        <label>Multiple Select</label>
+        <label>Multiple Select</label>  
       </div>
 
       <!-- RADIO BUTTONS -->
-
+      <p>
+        <input type="radio" name="gender" id="male" checked><label for="male">Male</label>
+      </p>
+      <p>
+        <input type="radio" name="gender" id="female" checked><label for="female">Female</label>
+        </p>
+      </p>
       <br>
       <br>
 
       <!-- CHECKBOXES -->
 
-
+<p>
+  <input type="checkbox" class="filled-in" id="html"><label for="html">HTML</label>
+</p>
+<p>
+  <input type="checkbox" name="tech" id="css" ><label for="css">CSS</label>
+</p>
+<p>
+  <input type="checkbox" name="tech" id="node.js"><label for="node.js">javascript</label>
+</p>
+<p>
+  <input type="checkbox" name="tech" id="Mongo"><label for="Mongo">MongoDbss</label>
+</p>
       <br>
       <br>
       <div>
-        <input type="submit" value="Submit" class="btn">
+        <input type="submit" value="Save" class="btn">
       </div>
     </form>
 
@@ -228,8 +258,11 @@
         alignment: 'left'
       });
 
-      // JAVASCRIPT START HERE //
-
+      //JAVASCRIPT START HERE //
+      // document.querySelector('.input').addEventListener('DOMContentLoaded', function(){
+      //   console.log('test')
+      // });
+    $('select').material_select();
 
 
 
